Cleaning up dependencies, rethinking clients IDs (no more ip as unique id)
