# accounts_service/app/internal/model/sessionCache.go
@@ -5,7 +5,7 @@ import "time"
 type SessionCache struct {
 	SessionID    string    `json:"-"`
 	AccountID    string    `json:"account_id"`
+	MachineID    string    `json:"machine_id"`
 	ClientIP     string    `json:"client_ip"`
-	SessionInfo  string    `json:"session_info"` // like device or browser
 	LastActivity time.Time `json:"last_activity"`
 }
